--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,7 +127,7 @@ services:
       - "18130:18130"
 
   lms:
-    command: bash -c 'source /edx/app/edxapp/edxapp_env && while true; do python /edx/app/edxapp/edx-platform/manage.py lms runserver 0.0.0.0:18000 --settings devstack_docker; sleep 2; done'
+    command: bash -c 'source /edx/app/edxapp/edxapp_env && while true; do python /edx/app/edxapp/edx-platform/manage.py lms runserver 0.0.0.0:18000 --settings devstack_docker --noreload; sleep 2; done'
     container_name: edx.devstack.lms
     depends_on:
       - devpi
@@ -144,6 +144,7 @@ services:
       EDXAPP_TEST_MONGO_HOST: edx.devstack.mongo
       NO_PYTHON_UNINSTALL: 1
     image: edxops/edxapp:${OPENEDX_RELEASE:-latest}
+    #image: master.lms
     ports:
       - "18000:18000"
       - "19876:19876" # JS test debugging
@@ -173,7 +174,7 @@ services:
       ELASTICSEARCH_URL: "http://edx.devstack.elasticsearch:9200"
 
   studio:
-    command: bash -c 'source /edx/app/edxapp/edxapp_env && while true; do python /edx/app/edxapp/edx-platform/manage.py cms runserver 0.0.0.0:18010 --settings devstack_docker; sleep 2; done'
+    command: bash -c 'source /edx/app/edxapp/edxapp_env && while true; do python /edx/app/edxapp/edx-platform/manage.py cms runserver 0.0.0.0:18010 --settings devstack_docker --noreload; sleep 2; done'
     container_name: edx.devstack.studio
     depends_on:
       - devpi
